DuPont DevSB/src/objects/ccrz__E_CartItemPricingTier__c.object
<CustomObject>
    <description>Pricing tiers for the cart item. Contains stepped pricing info.</description>
    <fields>
        <fullName>ccrz__CartItemPricingTierId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Cart Item Pricing Tier Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CartItem__c</fullName>
        <description>Reference to the cart line item this tier applies to.</description>
        <label>Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipName>Cart_Item_Pricing_Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>The price for the tier.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The quantity that the tier applies to.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>The line total for the tier.</description>
        <label>SubAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CC Cart Item Pricing Tier</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Cart Item Pricing Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Item Pricing Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>